--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,3 +26,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+    - name: Upload Test Reports
+      uses: actions/upload-artifact@v3
+      if: success() || failure() # always run even if the previous step fails
+      with:
+        name: test-reports
+        path: app/build/reports/tests/test/**
