--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
       if: success() || failure() # always run even if the previous step fails
       with:
         name: test-reports
-        path: app/build/reports/tests/test/**
+        path: '**/build/test-results/**'
