--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install Mesa3D
       run: |
         sudo apt-get update
-        sudo apt-get install -y mesa-utils libgl1-mesa-dri libgl1-mesa-glx
+        sudo apt-get install -y mesa-utils libgl1-mesa-dri libgl1-mesa-glx xvfb
 
     - name: Set environment variables for Mesa3D
       run: |
