--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     implementation "org.jmonkeyengine:jme3-core:$jmonkeyengine_version"
     implementation "org.jmonkeyengine:jme3-lwjgl3:$jmonkeyengine_version"
     implementation "org.jmonkeyengine:jme3-desktop:$jmonkeyengine_version"
+    implementation "org.jmonkeyengine:jme3-effects:$jmonkeyengine_version"
+    implementation "org.jmonkeyengine:jme3-terrain:$jmonkeyengine_version"
+    implementation "org.jmonkeyengine:jme3-testdata:$jmonkeyengine_version"
 }
 
 test {
