--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
       if: success() || failure() # always run even if the previous step fails
       with:
         name: test-reports
-        path: '**/build/test-reports/**'
+        path: '**/build/reports/**'
     - name: Upload Changed Image
       uses: actions/upload-artifact@v3
       if: success() || failure() # always run even if the previous step fails
