--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,12 @@ jobs:
         echo "MESA_LOADER_DRIVER_OVERRIDE=llvmpipe" >> $GITHUB_ENV
     - name: Start xvfb
       run: |
-        sudo Xvfb :99 -ac -screen 0 1280x1024x16 &
+        sudo Xvfb :99 -ac -screen 0 1024x768x24 &
         export DISPLAY=:99
         echo "DISPLAY=:99" >> $GITHUB_ENV
+        sleep 3  # Give xvfb some time to start
+    - name: Verify xvfb
+      run: xdpyinfo -display :99
     - name: Verify Mesa3D Installation
       run: |
         glxinfo | grep "OpenGL"
