--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,10 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+    - name: Create reports directory
+      run: |
+        mkdir -p build/reports
+
     - name: Install Mesa3D
       run: |
         sudo apt-get update
@@ -31,7 +35,7 @@ jobs:
         echo "MESA_LOADER_DRIVER_OVERRIDE=llvmpipe" >> $GITHUB_ENV
     - name: Start xvfb
       run: |
-        sudo Xvfb :99 -ac -screen 0 1024x768x24 &
+        sudo Xvfb :99 -ac -screen 0 1024x768x24 > build/reports/xvfb.log 2>&1 &
         export DISPLAY=:99
         echo "DISPLAY=:99" >> $GITHUB_ENV
         sleep 3  # Give xvfb some time to start
