--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
         mkdir -p build/reports
     - name: Set Mesa3D log file
       run: |
+        echo "MESA_DEBUG=flush" >> $GITHUB_ENV
         echo "MESA_LOG_FILE=build/reports/mesa3d.log" >> $GITHUB_ENV
     - name: Install Mesa3D
       run: |
