--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,4 +78,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: hs_err_logs
-        path: /home/runner/work/jmonkeyengine/jmonkeyengine/jme3-screenshot-tests/hs_err_pid*.log
+        path: '**/hs_err_pid*.log'
