--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install Mesa3D
       run: |
         sudo apt-get update
-        sudo apt-get install -y mesa-utils libgl1-mesa-dri libgl1-mesa-glx xvfb x11-utils
+        sudo apt-get install -y mesa-utils libgl1-mesa-dri libgl1-mesa-glx libglx-mesa0 xvfb x11-utils
 
     - name: Set environment variables for Mesa3D
       run: |
