--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,19 +53,19 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
     - name: Upload Test Results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@master
       if: success() || failure() # always run even if the previous step fails
       with:
         name: test-results
         path: '**/build/test-results/**'
     - name: Upload Test Reports
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@master
       if: success() || failure() # always run even if the previous step fails
       with:
         name: test-reports
         path: '**/build/reports/**'
     - name: Upload Changed Image
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@master
       if: success() || failure() # always run even if the previous step fails
       with:
         name: changed-images
@@ -73,7 +73,7 @@ jobs:
             '**/build/changed-images/**'
     - name: Upload error logs
       if: always()  # Ensures this step runs even if previous steps fail
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@master
       with:
         name: hs_err_logs
         path: '**/hs_err_pid*.log'
